fixed issue on mobile with weird x-direction overflow

--- a/css/case-mobile.css
+++ b/css/case-mobile.css
@@ -1,5 +1,11 @@
 @media only screen and (max-width: 600px) {
 
+    html, body {
+        overflow-x: hidden;
+    }
+
+    /* ---------------------------- */
+
     nav {
         width: 100vw;
         padding-top: 0;
